--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -123,5 +123,17 @@
 	    <version>2.0.1.Final</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.5</version>
+	</dependency>
+	
   </dependencies>
 </project>
