--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -37,6 +37,13 @@
     	<version>5.2.1.RELEASE</version>
 	</dependency>
     
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-tx</artifactId>
+	    <version>5.2.1.RELEASE</version>
+	</dependency>
+    
     
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
 	<dependency>
@@ -86,27 +93,6 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-webmvc</artifactId>
 		<version>5.2.1.RELEASE</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
-	<dependency>
-	    <groupId>org.springframework.security</groupId>
-	    <artifactId>spring-security-core</artifactId>
-	    <version>5.2.1.RELEASE</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-	<dependency>
-	    <groupId>org.springframework.security</groupId>
-	    <artifactId>spring-security-web</artifactId>
-	    <version>5.2.1.RELEASE</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
-	<dependency>
-	    <groupId>org.springframework.security</groupId>
-	    <artifactId>spring-security-config</artifactId>
-	    <version>5.2.1.RELEASE</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
