--- a/Frontend/src/main/webapp/WEB-INF/web.xml
+++ b/Frontend/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>/WEB-INF/dispatcher-servlet.xml,/WEB-INF/spring-security.xml</param-value>
 	</context-param>
 	
 	<!-- <context-param>
@@ -31,13 +31,13 @@
   
   	<!-- spring security configuration -->
   	
-    <!-- <filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> -->
+    </filter-mapping>
   
 </web-app>
